src/main/java/dot/bpm/parser/antlr/DOTBPMParser.java
// Generated from E:/Brennan/Projects/dotbpm/src/main/java/dot/bpm/parser/antlr/DOTBPM.g4 by ANTLR 4.13.1
package dot.bpm.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DOTBPMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, POOL_OPEN=16, 
		POOL_CLOSE=17, LANE_OPEN=18, LANE_CLOSE=19, CURLY_OPEN=20, CURLY_CLOSE=21, 
		SQRE_OPEN=22, SQRE_CLOSE=23, PAREN_OPEN=24, PAREN_CLOSE=25, ANGLE_OPEN=26, 
		ANGLE_CLOSE=27, STMT_TERM=28, VERT_LINE=29, DVERT_LINE=30, REF=31, X=32, 
		OR=33, XOR=34, AND=35, STAR=36, PLUS=37, BLANK=38, SLASH=39, DASH=40, 
		BACKWARD=41, BANG=42, QUESTION=43, CARET=44, TILDE=45, AT_SYMB=46, ELLIPSIS=47, 
		X_BANG=48, PROCESS=49, SUBPROCESS=50, USER=51, SERVICE=52, SCRIPT=53, 
		CATCH=54, THROW=55, IN=56, OUT=57, DEFAULT=58, FORK=59, XOR_SPLIT=60, 
		OR_SPLIT=61, EVENT_SPLIT=62, JOIN=63, OR_JOIN=64, XOR_JOIN=65, STRING=66, 
		NUMBER=67, BOOLEAN=68, ID=69, COMMENT=70, LINE_COMMENT=71, WS=72;
	public static final int
		RULE_process = 0, RULE_subprocess = 1, RULE_pool_list = 2, RULE_pool_header = 3, 
		RULE_pool = 4, RULE_lane_list = 5, RULE_lane_header = 6, RULE_lane = 7, 
		RULE_stmt_list = 8, RULE_stmt = 9, RULE_sequence = 10, RULE_sequence_elem = 11, 
		RULE_activity = 12, RULE_task = 13, RULE_task_type = 14, RULE_event = 15, 
		RULE_event_category = 16, RULE_event_type = 17, RULE_boundary_event = 18, 
		RULE_gateway = 19, RULE_fork_diverge = 20, RULE_event_diverge = 21, RULE_condition_diverge = 22, 
		RULE_and_converge = 23, RULE_or_converge = 24, RULE_inflows = 25, RULE_outflows = 26, 
		RULE_cond_outflows = 27, RULE_cond_outflow = 28, RULE_message = 29, RULE_sender = 30, 
		RULE_recipient = 31, RULE_association = 32, RULE_artifact = 33, RULE_assoc_flow = 34, 
		RULE_dir_assoc = 35, RULE_undir_assoc = 36, RULE_sequence_flow = 37, RULE_message_flow = 38, 
		RULE_input_set = 39, RULE_output_set = 40, RULE_attr_list = 41, RULE_attribute = 42, 
		RULE_attr_value = 43, RULE_param_list = 44, RULE_param = 45, RULE_param_type = 46, 
		RULE_id = 47, RULE_namespace_id = 48, RULE_link_list = 49, RULE_event_links = 50, 
		RULE_link = 51, RULE_activity_link = 52, RULE_event_link = 53, RULE_gateway_link = 54, 
		RULE_pool_link = 55, RULE_endpoint_link = 56, RULE_expression = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"process", "subprocess", "pool_list", "pool_header", "pool", "lane_list", 
			"lane_header", "lane", "stmt_list", "stmt", "sequence", "sequence_elem", 
			"activity", "task", "task_type", "event", "event_category", "event_type", 
			"boundary_event", "gateway", "fork_diverge", "event_diverge", "condition_diverge", 
			"and_converge", "or_converge", "inflows", "outflows", "cond_outflows", 
			"cond_outflow", "message", "sender", "recipient", "association", "artifact", 
			"assoc_flow", "dir_assoc", "undir_assoc", "sequence_flow", "message_flow", 
			"input_set", "output_set", "attr_list", "attribute", "attr_value", "param_list", 
			"param", "param_type", "id", "namespace_id", "link_list", "event_links", 
			"link", "activity_link", "event_link", "gateway_link", "pool_link", "endpoint_link", 
			"expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'->-'", "'---'", "'==>'", "'-->'", "'='", "'string'", 
			"'boolean'", "'number'", "'date'", "'datetime'", "'time'", "'.'", "'`'", 
			"'(('", "'))'", "'|['", "']|'", "'{'", "'}'", "'['", "']'", "'('", "')'", 
			"'<'", "'>'", "';'", "'|'", "'||'", "'#'", "'X'", "'OR'", "'XOR'", "'AND'", 
			"'*'", "'+'", "'_'", "'/'", "'-'", "'<<'", "'!'", "'?'", "'^'", "'~'", 
			"'@'", "'..'", "'X!'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'(*)'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "POOL_OPEN", "POOL_CLOSE", "LANE_OPEN", "LANE_CLOSE", 
			"CURLY_OPEN", "CURLY_CLOSE", "SQRE_OPEN", "SQRE_CLOSE", "PAREN_OPEN", 
			"PAREN_CLOSE", "ANGLE_OPEN", "ANGLE_CLOSE", "STMT_TERM", "VERT_LINE", 
			"DVERT_LINE", "REF", "X", "OR", "XOR", "AND", "STAR", "PLUS", "BLANK", 
			"SLASH", "DASH", "BACKWARD", "BANG", "QUESTION", "CARET", "TILDE", "AT_SYMB", 
			"ELLIPSIS", "X_BANG", "PROCESS", "SUBPROCESS", "USER", "SERVICE", "SCRIPT", 
			"CATCH", "THROW", "IN", "OUT", "DEFAULT", "FORK", "XOR_SPLIT", "OR_SPLIT", 
			"EVENT_SPLIT", "JOIN", "OR_JOIN", "XOR_JOIN", "STRING", "NUMBER", "BOOLEAN", 
			"ID", "COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DOTBPM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DOTBPMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcessContext extends ParserRuleContext {
		public TerminalNode PROCESS() { return getToken(DOTBPMParser.PROCESS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode CURLY_OPEN() { return getToken(DOTBPMParser.CURLY_OPEN, 0); }
		public TerminalNode CURLY_CLOSE() { return getToken(DOTBPMParser.CURLY_CLOSE, 0); }
		public TerminalNode EOF() { return getToken(DOTBPMParser.EOF, 0); }
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public Pool_listContext pool_list() {
			return getRuleContext(Pool_listContext.class,0);
		}
		public ProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitProcess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitProcess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessContext process() throws RecognitionException {
		ProcessContext _localctx = new ProcessContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_process);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(PROCESS);
			setState(117);
			id();
			setState(118);
			match(CURLY_OPEN);
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CURLY_CLOSE:
			case SQRE_OPEN:
			case PAREN_OPEN:
			case ANGLE_OPEN:
			case DVERT_LINE:
			case REF:
			case SUBPROCESS:
				{
				setState(119);
				stmt_list();
				}
				break;
			case POOL_OPEN:
				{
				setState(120);
				pool_list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(123);
			match(CURLY_CLOSE);
			setState(124);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubprocessContext extends ParserRuleContext {
		public TerminalNode SUBPROCESS() { return getToken(DOTBPMParser.SUBPROCESS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode CURLY_OPEN() { return getToken(DOTBPMParser.CURLY_OPEN, 0); }
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public TerminalNode CURLY_CLOSE() { return getToken(DOTBPMParser.CURLY_CLOSE, 0); }
		public List<TerminalNode> VERT_LINE() { return getTokens(DOTBPMParser.VERT_LINE); }
		public TerminalNode VERT_LINE(int i) {
			return getToken(DOTBPMParser.VERT_LINE, i);
		}
		public List<Boundary_eventContext> boundary_event() {
			return getRuleContexts(Boundary_eventContext.class);
		}
		public Boundary_eventContext boundary_event(int i) {
			return getRuleContext(Boundary_eventContext.class,i);
		}
		public SubprocessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subprocess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterSubprocess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitSubprocess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitSubprocess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubprocessContext subprocess() throws RecognitionException {
		SubprocessContext _localctx = new SubprocessContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subprocess);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SUBPROCESS);
			setState(127);
			id();
			setState(128);
			match(CURLY_OPEN);
			setState(129);
			stmt_list();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VERT_LINE) {
				{
				{
				setState(130);
				match(VERT_LINE);
				setState(131);
				boundary_event();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pool_listContext extends ParserRuleContext {
		public List<PoolContext> pool() {
			return getRuleContexts(PoolContext.class);
		}
		public PoolContext pool(int i) {
			return getRuleContext(PoolContext.class,i);
		}
		public Pool_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterPool_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitPool_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitPool_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pool_listContext pool_list() throws RecognitionException {
		Pool_listContext _localctx = new Pool_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pool_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				pool();
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==POOL_OPEN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pool_headerContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode STMT_TERM() { return getToken(DOTBPMParser.STMT_TERM, 0); }
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public Pool_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterPool_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitPool_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitPool_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pool_headerContext pool_header() throws RecognitionException {
		Pool_headerContext _localctx = new Pool_headerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pool_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			id();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STMT_TERM) {
				{
				setState(145);
				match(STMT_TERM);
				setState(146);
				attr_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PoolContext extends ParserRuleContext {
		public TerminalNode POOL_OPEN() { return getToken(DOTBPMParser.POOL_OPEN, 0); }
		public Pool_headerContext pool_header() {
			return getRuleContext(Pool_headerContext.class,0);
		}
		public TerminalNode VERT_LINE() { return getToken(DOTBPMParser.VERT_LINE, 0); }
		public TerminalNode POOL_CLOSE() { return getToken(DOTBPMParser.POOL_CLOSE, 0); }
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public Lane_listContext lane_list() {
			return getRuleContext(Lane_listContext.class,0);
		}
		public PoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterPool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitPool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitPool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolContext pool() throws RecognitionException {
		PoolContext _localctx = new PoolContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(POOL_OPEN);
			setState(150);
			pool_header();
			setState(151);
			match(VERT_LINE);
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case POOL_CLOSE:
			case SQRE_OPEN:
			case PAREN_OPEN:
			case ANGLE_OPEN:
			case DVERT_LINE:
			case REF:
			case SUBPROCESS:
				{
				setState(152);
				stmt_list();
				}
				break;
			case LANE_OPEN:
				{
				setState(153);
				lane_list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(156);
			match(POOL_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lane_listContext extends ParserRuleContext {
		public List<LaneContext> lane() {
			return getRuleContexts(LaneContext.class);
		}
		public LaneContext lane(int i) {
			return getRuleContext(LaneContext.class,i);
		}
		public Lane_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lane_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterLane_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitLane_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitLane_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lane_listContext lane_list() throws RecognitionException {
		Lane_listContext _localctx = new Lane_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lane_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(158);
				lane();
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LANE_OPEN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lane_headerContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode STMT_TERM() { return getToken(DOTBPMParser.STMT_TERM, 0); }
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public Lane_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lane_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterLane_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitLane_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitLane_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lane_headerContext lane_header() throws RecognitionException {
		Lane_headerContext _localctx = new Lane_headerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lane_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			id();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STMT_TERM) {
				{
				setState(164);
				match(STMT_TERM);
				setState(165);
				attr_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LaneContext extends ParserRuleContext {
		public TerminalNode LANE_OPEN() { return getToken(DOTBPMParser.LANE_OPEN, 0); }
		public Lane_headerContext lane_header() {
			return getRuleContext(Lane_headerContext.class,0);
		}
		public TerminalNode VERT_LINE() { return getToken(DOTBPMParser.VERT_LINE, 0); }
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public TerminalNode LANE_CLOSE() { return getToken(DOTBPMParser.LANE_CLOSE, 0); }
		public LaneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lane; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).enterLane(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DOTBPMListener ) ((DOTBPMListener)listener).exitLane(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DOTBPMVisitor ) return ((DOTBPMVisitor<? extends T>)visitor).visitLane(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LaneContext lane() throws RecognitionException {
		LaneContext _localctx = new LaneContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lane);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(LANE_OPEN);
			setState(169);
			lane_header();
			setState(170);
			match(VERT_LINE);
			setState(171);
			stmt_list();
			setState(172);
			match(LANE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
